<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".activities.MainActivity">

    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/main_screen_text"
            android:textColor="@color/main_black_color"
            android:textSize="32sp"
            android:textStyle="bold" />

    </Toolbar>

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="1dp"
        android:background="#F5F5F5"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:padding="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintBaseline_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/block1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtPerevod"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:text="@string/main_screen_perevod_text"
                        android:textColor="@color/main_black_color"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="@id/block1"
                        app:layout_constraintStart_toStartOf="@id/block1"
                        app:layout_constraintTop_toTopOf="@id/block1" />

                    <ImageView
                        android:id="@+id/humoImage"
                        android:layout_width="216dp"
                        android:layout_height="216dp"
                        android:src="@drawable/humo_perevod"
                        app:layout_constraintEnd_toEndOf="@id/txtPerevod"
                        app:layout_constraintStart_toStartOf="@id/txtPerevod"
                        app:layout_constraintTop_toBottomOf="@id/txtPerevod" />

                    <TextView
                        android:id="@+id/btnSend"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/background_for_textview_2"
                        android:gravity="center"
                        android:paddingStart="28dp"
                        android:paddingTop="10dp"
                        android:paddingEnd="28dp"
                        android:paddingBottom="10dp"
                        android:text="@string/send_transcation"
                        android:textColor="@color/white"
                        android:textSize="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/humoImage"
                        app:layout_constraintVertical_bias="0.0" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:padding="16dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="@id/cardView1"
                app:layout_constraintStart_toStartOf="@id/cardView1"
                app:layout_constraintTop_toBottomOf="@id/cardView1">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/block2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="16dp">

                    <ImageView
                        android:id="@+id/humo_image2"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:src="@drawable/humo_image2"
                        app:layout_constraintStart_toStartOf="@id/block2"
                        app:layout_constraintTop_toTopOf="@id/block2" />

                    <TextView
                        android:id="@+id/update_txt"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/update_title"
                        android:textColor="#171717"
                        android:textSize="16sp"
                        app:layout_constraintStart_toEndOf="@id/humo_image2"
                        app:layout_constraintTop_toTopOf="@id/humo_image2" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/update_desc"
                        android:textColor="#737373"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="@id/block2"
                        app:layout_constraintStart_toStartOf="@id/update_txt"
                        app:layout_constraintTop_toBottomOf="@id/update_txt" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="@id/cardView2"
                app:layout_constraintStart_toStartOf="@id/cardView2"
                app:layout_constraintTop_toBottomOf="@id/cardView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/block3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp">

                    <TextView
                        android:id="@+id/popular_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/popular_country_text"
                        android:textColor="@color/main_black_color"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="@id/block3"
                        app:layout_constraintStart_toStartOf="@id/block3"
                        app:layout_constraintTop_toTopOf="@id/block3" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rcView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="true"
                        android:orientation="horizontal"
                        android:paddingStart="-8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/popular_country"
                        tools:ignore="RtlSymmetry" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/exitBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="27dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/cardView3"
                app:layout_constraintStart_toStartOf="@+id/cardView3"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/block4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/exit"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="12dp"
                        android:src="@drawable/left"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="@+id/block4"
                        app:layout_constraintTop_toTopOf="@+id/block4" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="78dp"
                        android:padding="8dp"
                        android:text="Выйти"
                        android:textColor="#FF5555"
                        android:textFontWeight="600"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="@+id/exit"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/exit"
                        app:layout_constraintTop_toTopOf="@+id/exit" />


                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>
